language-selector (1.00) raring; urgency=low

  * help/C/language-selector.xml:
    Update due to the transition from im-switch to im-config.

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Tue, 29 Jan 2013 21:29:00 +0100

language-selector (0.99) raring; urgency=low

  * LanguageSelector/ImConfig.py,
    LanguageSelector/gtk/GtkLanguageSelector.py:
    - Get available input methods from im-config (LP: #1090754).
  * debian/control:
    - Bump version of the im-config dependency.
    - yelp added to the Recommends field, since it's needed for the
      "Help" button to work.

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Tue, 18 Dec 2012 21:32:00 +0100

language-selector (0.98) raring; urgency=low

  * debian/control:
    - Bump version of the im-config dependency.

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Mon, 10 Dec 2012 17:29:00 +0100

language-selector (0.97) raring; urgency=low

  * Restore to version 0.95, now that the im-config MIR is sorted.

 -- Adam Conrad <adconrad@ubuntu.com>  Sun, 09 Dec 2012 10:47:01 -0700

language-selector (0.96) raring; urgency=low

  * Revert to 0.94, as the im-switch transition needs MIR approval.

 -- Adam Conrad <adconrad@ubuntu.com>  Fri, 07 Dec 2012 15:28:29 -0700

language-selector (0.95) raring; urgency=low

  * LanguageSelector/gtk/GtkLanguageSelector.py:
    - Deprecated keyword "type" in Gtk.MessageDialog constructors
      replaced by "message_type".
  * debian/control, LanguageSelector/gtk/GtkLanguageSelector.py,
    LanguageSelector/ImConfig.py, data/LanguageSelector.ui:
    - Transition from the im-switch framework for handling input
      method systems to im-config (LP: #1076975).

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Fri, 30 Nov 2012 05:36:00 +0100

language-selector (0.94) raring; urgency=low

  * data/language-selector.desktop.in:
    - Use equivalent 'preferences-desktop-locale' icon instead of
      'config-language' since the High Contrast theme is missing a symlink
